# Digitalis

./: .env  .gitignore  README.md  app.json  compose.yml  deploy-pod.sh  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
app/: Login.tsx  index.tsx
app/(main)/: Home.tsx
app/(main)/new/: Add-Chat.tsx
app/(popups)/: Empty-Key.tsx  Locked.tsx  Lost-Connection.tsx
backend/: .env  Cargo.toml  Dockerfile  entry.sh  up.sql
backend/src/: helpers.rs  main.rs  models.rs  schema.rs  send_message.rs
digitalis/: app.json  log.txt  package.json  setup.txt
digitalis/android/app/: build.gradle
digitalis/app/: Login.tsx  Test.tsx  _layout.tsx  index.tsx
digitalis/app/(main)/: Home.tsx
digitalis/app/(popups)/: Lost-Connection.tsx
digitalis/components/: Logo.tsx
digitalis/constants/: colors.tsx
digitalis/ios/: Podfile
digitalis/src/: App.tsx
digitalis/stores/: Contacts.ts  CredentialStore.ts
digitalis/styles/: utility.ts
frontend/: .env  App.tsx  app.json  env.d.ts  package-lock.json  package.json  react-native.config.js  tsconfig.json
frontend/android/: link-assets-manifest.json  settings.gradle
frontend/src/: App.tsx
frontend_old/: .env.example  app.json  babel.config.js  package.json
frontend_old/android/: settings.gradle
frontend_old/ios/: Podfile
frontend_old/src/: App.tsx
ios/: Podfile
ios/Digitalis.xcodeproj/: project.pbxproj
mobile-app/thecrypt/: app.json  package-lock.json  package.json
modules/digitalis-share/: expo-module.config.json  index.ts
stores/: Websocket.ts
styles/: text.ts
(+83 files in other folders)
